# parti

./: .gitignore  Cargo.toml  README.md  build.rs  test.sqlite3
src/: main.rs
src/game/: Cargo.toml  font.rs  lib.rs  models.rs
src/shader/: 150.glslf  150.glslv
