[package]
name = "parti"
version = "0.0.0"
authors = ["ggkuron"]
build = "build.rs"

[dependencies]
glutin = "0.7"
cgmath = "0.12.0"
rusqlite = "0.7.3"
[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx.git"
rev = "a33a640cbf048ad0348a73b5b47c61437a739a53"
[dependencies.gfx_window_glutin]
git = "https://github.com/gfx-rs/gfx.git"
rev = "a33a640cbf048ad0348a73b5b47c61437a739a53"
[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx.git"
rev = "a33a640cbf048ad0348a73b5b47c61437a739a53"
